# tp2_telematique

./: .clang-format  .gitignore  CMakeLists.txt  Computer1.txt  Computer1Files.txt  Computer2.txt  Computer3.txt  Computer3Files.txt  IFT585.natvis  Simulateur.vcxproj  Simulateur.vcxproj.filters  config_no_noise.txt  config_noise.txt  main.cpp  test.cpp
Computer/: Computer.cpp  Computer.h
Computer/Driver/: NetworkDriver.cpp  NetworkDriver.h
Computer/Driver/Layer/: DataType.h  LinkLayer.cpp  LinkLayer.h  LinkLayerLow.cpp  LinkLayerLow.h  NetworkLayer.cpp  NetworkLayer.h
Computer/Hardware/: NetworkInterfaceCard.cpp  NetworkInterfaceCard.h
DataStructures/: CircularQueue.cpp  CircularQueue.h  DataBuffer.cpp  DataBuffer.h  MACAddress.cpp  MACAddress.h  Utils.h
General/: Configuration.cpp  Configuration.h  Logger.h  Timer.cpp  Timer.h
Transmission/: Cable.cpp  Cable.h  Interferences.cpp  Interferences.h  Transmission.cpp  Transmission.h
